css/style.css
/* ... */
.btn.btn-outline-white:hover, .btn.btn-outline-white:focus {
  background: #fff;
  color: #000;
}

/* Header */
header {
  position: relative;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 5;
}

header .navbar-brand {
  text-transform: uppercase;
  letter-spacing: .2em;
  font-weight: 400;
}

header .navbar-brand span {
  color: #f4b214;
}

header .top-bar {
  background: #dee2e6;
}

header .top-bar a {
  color: #fff;
  padding: 10px;
  font-size: 13px;
  display: inline-block;
}

header .top-bar .cta-btn {
  display: inline-block;
  padding-right: 15px;
  padding-left: 15px;
  background: #5AC8D8;
}

header .top-bar .cta-btn:hover {
  -webkit-box-shadow: 2px 0 20px 0 rgba(0, 0, 0, 0.1);
  box-shadow: 2px 0 20px 0 rgba(0, 0, 0, 0.1);
}

header .top-bar .social {
  margin-bottom: 0;
}

header .top-bar .social li {
  display: inline-block;
  text-align: center;
}

header .top-bar .social li a {
  color: #fff;
  padding: 10px;
  width: 40px;
  display: inline-block;
}

@media (max-width: 991px) {
  header .top-bar .social li a {
    padding-left: 10px;
    padding-right: 10px;
    width: inherit;
  }
}



header .top-bar .social li a:hover {
  background: #5AC8D8;
  color: #fff;
  -webkit-box-shadow: 2px 0 20px 0 rgba(0, 0, 0, 0.1);
  box-shadow: 2px 0 20px 0 rgba(0, 0, 0, 0.1);
}

header .navbar {
  padding-top: 0;
  padding-bottom: 0;
  background: #e4a40b !important;
}

@media (max-width: 1199px) {
  header .navbar {
    background: #e4a40b !important;
    padding-top: .5rem;
    padding-bottom: .5rem;
  }
}

header .navbar .nav-link {
  padding: 1.7rem 1rem;
  outline: none !important;
}

@media (max-width: 1199px) {
  header .navbar .nav-link {
    padding: .5rem 0rem;
  }
}

header .navbar .nav-link.active {
  color: #f4b214 !important;
}

header .navbar .dropdown-menu {
  font-size: 14px;
  border-radius: 0px;
  border: none;
  -webkit-box-shadow: 0 2px 30px -2px rgba(0, 0, 0, 0.2);
  box-shadow: 0 2px 30px -2px rgba(0, 0, 0, 0.2);
  min-width: 13em;
  position: relative;
  margin-top: -10px;
}

header .navbar .dropdown-menu .dropdown-item:hover {
  background: #f4b214;
  color: #fff;
}

header .navbar .dropdown-menu .dropdown-item.active {
  background: #f4b214;
  color: #fff;
}

header .navbar .dropdown-menu a {
  padding-top: 7px;
  padding-bottom: 7px;
}

header .navbar .cta-btn a {
  background: #f4b214;
  color: #000 !important;
  padding-left: 20px !important;
  padding-right: 20px !important;
  text-transform: uppercase;
  padding-top: 26px !important;
  padding-bottom: 26px !important;
  line-height: 1;
  -webkit-transition: .3s all ease;
  -o-transition: .3s all ease;
  transition: .3s all ease;
}

header .navbar .cta-btn a:hover {
  color: #fff !important;
  -webkit-box-shadow: 2px 0 30px -5px rgba(244, 178, 20, 0.9);
  box-shadow: 2px 0 30px -5px rgba(244, 178, 20, 0.9);
}

.cta-overlap {
  margin-top: -4em;
  position: relative;
  z-index: 100;
}

.cta-overlap .text {
  background: #f4b214;
  padding: 3em 2em;
  -webkit-box-shadow: 0 1px 30px -4px rgba(0, 0, 0, 0.2);
  box-shadow: 0 1px 30px -4px rgba(0, 0, 0, 0.2);
}

@media (max-width: 991px) {
  .cta-overlap .text {
    padding: 30px 15px;
    display: block !important;
    text-align: center;
  }
}

.cta-overlap .text h2 {
  margin-bottom: 0;
  color: #fff;
}

@media (max-width: 991px) {
  .cta-overlap .text h2 {
    margin-bottom: 20px;
    font-size: 26px;
  }
}

.custom-icon {
  font-size: 70px;
  color: #f4b214;
}

/* Owl Carousel */
.owl-carousel .owl-item {
  opacity: .4;
}

.owl-carousel .owl-item.active {
  opacity: 1;
}

.owl-carousel .owl-nav {
  position: absolute;
  top: 50%;
  width: 100%;
}

.owl-carousel .owl-nav .owl-prev,
.owl-carousel .owl-nav .owl-next {
  position: absolute;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  margin-top: -10px;
}

.owl-carousel .owl-nav .owl-prev:hover, .owl-carousel .owl-nav .owl-prev:focus, .owl-carousel .owl-nav .owl-prev:active,
.owl-carousel .owl-nav .owl-next:hover,
.owl-carousel .owl-nav .owl-next:focus,
.owl-carousel .owl-nav .owl-next:active {
  outline: none;
}

.owl-carousel .owl-nav .owl-prev span:before,
.owl-carousel .owl-nav .owl-next span:before {
  font-size: 40px;
}

.owl-carousel .owl-nav .owl-prev {
  left: 30px !important;
}

.owl-carousel .owl-nav .owl-next {
  right: 30px !important;
}

.owl-carousel .owl-dots {
  text-align: center;
}

.owl-carousel .owl-dots .owl-dot {
  width: 10px;
  height: 10px;
  margin: 5px;
  border-radius: 50%;
  background: #e6e6e6;
}

.owl-carousel .owl-dots .owl-dot.active {
  background: #f4b214;
}

.owl-carousel.home-slider {
  z-index: 1;
  position: relative;
}

.owl-carousel.home-slider .owl-nav {
  opacity: 0;
  visibility: hidden;
  -webkit-transition: .3s all ease;
  -o-transition: .3s all ease;
  transition: .3s all ease;
}

.owl-carousel.home-slider .owl-nav button {
  color: #fff;
}

.owl-carousel.home-slider:focus .owl-nav, .owl-carousel.home-slider:hover .owl-nav {
  opacity: 1;
  visibility: visible;
}

.owl-carousel.home-slider .slider-item {
  background-image: url('../img/slider1.png');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  height: calc(100vh - 117px);
  min-height: 700px;
}

.owl-carousel.home-slider .slider-item .slider-text {
  color: #fff;
  height: calc(100vh - 117px);
  min-height: 700px;
}

.owl-carousel.home-slider .slider-item .slider-text h1 {
  font-size: 40px;
  color: #fff;
  line-height: 1.2;
  font-weight: 800 !important;
  text-transform: uppercase;
}

@media (max-width: 991px) {
  .owl-carousel.home-slider .slider-item .slider-text h1 {
    font-size: 40px;
  }
}

.owl-carousel.home-slider .slider-item .slider-text p {
  font-size: 20px;
  line-height: 1.5;
  font-weight: 300;
  color: white;
}

.owl-carousel.home-slider.inner-page .slider-item {
  height: calc(50vh - 117px);
  min-height: 500px;
}
/* ... */

